# aimodel

./: .gitignore  AGENTS.md  entities.json  index.html  my_backup.jsonl  package-lock.json  package.json  skills-lock.json  tailwind.config.js
.beads/: issues.jsonl  issues.jsonl.bak
.claude/: .mcp.json
.ntm/: system-prompt.md  test-and-review-prompt.md
backend/: .env.example  AGENTS.md  composer.json  docker-compose.yml  phpunit.xml
designs/: design.pen
docs/: workflow.md
frontend/: .gitignore  eslint.config.js  package-lock.json  package.json  vite.config.ts
kol-creator/: .env.example  .gitignore  pyproject.toml
kol-creator/src/kol_creator/: __init__.py  cli.py  config.py
kol-creator/src/kol_creator/adapters/: __init__.py  base.py  mock.py  registry.py
kol-creator/src/kol_creator/models/: __init__.py  content.py  kol.py  prompt.py
plans/: 00-planning-methodology.md  01-seed.md  02-compete-claude.md  02-compete-gemini.md  02-compete-grok.md  02-complete-gpt.md  02-diverge-notes.md  03-synthesis-prompt.md  03-synthesized-plan.md  04-refinement-round1-prompt.md  04-refinement-round1-result.md  05-refinement-round2-prompt.md  05-refinement-round2-result.md  06-final-plan.md
resources/: content-strategy-week1.md  content-strategy-week2.md  generative-ai-toolset.md  persona-brand-identity.md  social-media-channels.md  virtual-influencer-launch-plan.md
skills/: README.md  audio-voice.md  content-pipeline.md  image-prompting.md  marketing-strategy.md  model-manager.md  persona-manager.md  scriptwriting.md  video-prompting.md
src/: accessibility.test.ts  (+2 more)
(+709 files in other folders)
